--- a/web/style.css
+++ b/web/style.css
@@ -1,28 +1,35 @@
 .board {
     border-collapse: collapse;
+    /* width: 99vmin; */
+    /* height: 99vmin; */
 }
 
 .cell {
     border: solid;
     background-color: green;
     text-align: center;
-    width: 2vw;
-    height: 2vw;
 }
 
 .cell-button {
-    width: 100%;
-    height: 100%;
+    width: 11vmin;
+    height: 11vmin;
     background-color: unset;
     border: unset;
 }
 
-.black {
-    color: black;
+.cell-button > svg {
+    opacity: 0;
+    pointer-events: none;
 }
 
-.white {
-    color: white;
+.black > svg {
+    opacity: 1;
+    filter: invert(1);
+}
+
+.white > svg {
+    opacity: 1;
+    filter: invert(0);
 }
 
 .hilight {
