--- a/web/style.css
+++ b/web/style.css
@@ -17,17 +17,17 @@
     border: unset;
 }
 
-.cell-button > svg {
+.cell-button > img {
     opacity: 0;
     pointer-events: none;
 }
 
-.black > svg {
+.black > img {
     opacity: 1;
     filter: invert(1);
 }
 
-.white > svg {
+.white > img {
     opacity: 1;
     filter: invert(0);
 }
